--- a/project1.html
+++ b/project1.html
@@ -313,17 +313,17 @@
                 <div class="menber" id="menber-1">
                     <img class="menber-img" src="team/witch/蘇.jpg" alt="">
                     <h2>蘇皓</h2>
-                    <p>負責工作</p>
-                    <button onclick="showText(this)" data-target="#work-text1" data-text="sw91123me@gmail.com" ><img class="work-1" src="img-project/mail 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text1" data-text="國小擔任數學小老師"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text1" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text1" data-text="當歌手...是我最想當的"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <p>美術設計</p>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="wiiu1234th@gmail.com" ><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="邊緣社社長、國小100m金牌"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="https://reurl.cc/Gp8dbx (作品集)"><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="No Art No Life"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
                     <div id="work-text1" class="work-text"><h4></h4></div>
                 </div>
                 <div class="menber" id="menber-2">
                     <img class="menber-img" src="team/witch/IMG_5858.JPG" alt="">
                     <h2>黃詠傑</h2>
-                    <p>負責工作</p>
+                    <p>程式設計</p>
                     <button onclick="showText(this)" data-target="#work-text2" data-text="jacky920525@gmail.com" ><img class="work-1" src="img-project/mail 1.png" alt=""></button>
                     <button onclick="showText(this)" data-target="#work-text2" data-text="1個月訂閱好傑寶"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
                     <button onclick="showText(this)" data-target="#work-text2" data-text="https://nova.gd/@jay0525"><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
@@ -333,11 +333,11 @@
                 <div class="menber" id="menber-4">
                     <img class="menber-img" src="team/witch/閔.jpg" alt="">
                     <h2>許博閔</h2>
-                    <p>負責工作</p>
-                    <button onclick="showText(this)" data-target="#work-text3" data-text="wiiu1234th@gmail.com" ><img class="work-1" src="img-project/mail 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text3" data-text="邊緣社社長、國小100m金牌"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text3" data-text="https://reurl.cc/Gp8dbx (作品集)"><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text3" data-text="No Art No Life"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <p>網頁設計</p>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="sw91123me@gmail.com" ><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="國小擔任數學小老師"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="當歌手...是我最想當的"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
                     <div id="work-text3" class="work-text"><h4></h4></div>
                 </div>
                 <img class="light-4" src="img-project/Ellipse 7.png" alt="">
@@ -392,11 +392,11 @@
                 <div class="menber" id="menber-1">
                     <img class="menber-img" src="team/heart/林欣霓個人照.jpg" alt="">
                     <h2>林欣霓</h2>
-                    <p>腳本設計</p>
-                    <button onclick="showText(this)" data-text="money104237@gmail.com" data-target="#work-text1"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text1" data-text="參與 Golden Wave in Taiwan"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text1" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text1" data-text="I'm tiger🐯"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <p>美術設計</p>
+                    <button onclick="showText(this)" data-text="z044108521@gmail.com" data-target="#work-text1"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="https://www.instagram.com/qu0_drawing/"><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="喜歡電繪、寫故事、聽電子古典音樂"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
                     <div id="work-text1" class="work-text"><h4></h4></div>
                 </div>
                 <div class="menber" id="menber-2">
@@ -412,11 +412,11 @@
                 <div class="menber" id="menber-4">
                     <img class="menber-img" src="team/heart/IMG_5768.JPG" alt="">
                     <h2>陳玟靜</h2>
-                    <p>美術設計</p>
-                    <button onclick="showText(this)" data-text="z044108521@gmail.com" data-target="#work-text3"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text3" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text3" data-text="https://www.instagram.com/qu0_drawing/"><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
-                    <button onclick="showText(this)" data-target="#work-text3" data-text="喜歡電繪、寫故事、聽電子古典音樂"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <p>腳本設計</p>
+                    <button onclick="showText(this)" data-text="money104237@gmail.com" data-target="#work-text3"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="參與 Golden Wave in Taiwan"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="I'm tiger🐯"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
                     <div id="work-text1" class="work-text"><h4></h4></div>
                 </div>
                 <img class="light-4" src="img-project/Ellipse 7.png" alt="">
